Add Format API & Update ReadMe
