# docs/swagger.yaml
@@ -88,4 +88,28 @@ paths:
           schema:
             $ref: '#/definitions/gin.H'
       summary: Execute Code Test
+  /format-code:
+    post:
+      consumes:
+      - application/json
+      description: Format Code.
+      parameters:
+      - description: Submission JSON
+        in: body
+        name: submission
+        required: true
+        schema:
+          $ref: '#/definitions/models.Submission'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/gin.H'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/gin.H'
+      summary: Format Code
 swagger: "2.0"
